--- a/gear/css/style.css
+++ b/gear/css/style.css
@@ -2,26 +2,14 @@ html, body {
     width: 100%;
     height: 100%;
     margin: 0;
-    overflow-y: hidden;
-}
-
-#container {
-    display: -webkit-flex;
-    -webkit-align-items: center;
-    width: 100%;
-    height: 100%
-}
-
-#canvas-layout {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    z-index: 1;
 }
 
 #canvas-content {
     position: absolute;
-    width: 100%;
-    height: 100%;
+    z-index: 1;
+}
+
+#canvas-skeleton {
+    position: absolute;
     z-index: 2;
 }
