--- a/gear/css/style.css
+++ b/gear/css/style.css
@@ -4,12 +4,17 @@ html, body {
     margin: 0;
 }
 
-#canvas-content {
+#canvas-background {
     position: absolute;
     z-index: 1;
 }
 
-#canvas-skeleton {
+#canvas-content {
     position: absolute;
     z-index: 2;
+}
+
+#canvas-skeleton {
+    position: absolute;
+    z-index: 3;
 }
