Create custom screen

--- a/companion/src/main/res/layout/custom.xml
+++ b/companion/src/main/res/layout/custom.xml
@@ -1,24 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
-    <LinearLayout
+    <com.nilhcem.hexawatch.ui.widget.WearFrameLayout
+        android:id="@+id/custom_hexawatch_container"
+        android:layout_width="wrap_content"
+        android:layout_height="200dp"
+        android:layout_alignParentTop="true">
+
+        <com.nilhcem.hexawatch.ui.widget.HexawatchView
+            android:id="@+id/custom_hexawatch"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:is_round="true"/>
+    </com.nilhcem.hexawatch.ui.widget.WearFrameLayout>
+
+    <ScrollView
+        android:id="@+id/custom_controls_container"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_height="match_parent"
+        android:layout_above="@+id/custom_buttons_container"
+        android:layout_below="@+id/custom_hexawatch_container">
 
-        <com.nilhcem.hexawatch.ui.widget.WearFrameLayout
-            android:layout_width="wrap_content"
-            android:layout_height="240dp">
+        <include layout="@layout/custom_controls"/>
+    </ScrollView>
 
-            <com.nilhcem.hexawatch.ui.widget.HexawatchView
-                android:id="@+id/custom_inner"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                app:is_round="true"/>
-        </com.nilhcem.hexawatch.ui.widget.WearFrameLayout>
-    </LinearLayout>
-</ScrollView>
+    <include
+        android:id="@+id/custom_buttons_container"
+        layout="@layout/custom_buttons"/>
+</RelativeLayout>
