--- a/companion/src/main/res/values/attrs.xml
+++ b/companion/src/main/res/values/attrs.xml
@@ -4,4 +4,8 @@
         <attr name="android:padding"/>
         <attr name="is_round" format="boolean"/>
     </declare-styleable>
+
+    <declare-styleable name="SeekBarChooserView">
+        <attr name="android:text"/>
+    </declare-styleable>
 </resources>
