--- a/companion/src/main/res/values/colors.xml
+++ b/companion/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="primary">#3F51B5</color>
     <color name="primary_dark">#303F9F</color>
     <color name="accent">#FF4081</color>
+    <color name="primary_text">#212121</color>
 </resources>
