--- a/companion/src/main/res/layout/config.xml
+++ b/companion/src/main/res/layout/config.xml
@@ -19,7 +19,7 @@
             app:tabMode="fixed"/>
     </android.support.design.widget.AppBarLayout>
 
-    <android.support.v4.view.ViewPager
+    <com.nilhcem.hexawatch.ui.widget.NonSwipeableViewPager
         android:id="@+id/config_viewpager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
