--- a/companion/src/main/res/layout/custom_buttons.xml
+++ b/companion/src/main/res/layout/custom_buttons.xml
@@ -9,11 +9,13 @@
     android:padding="6dp">
 
     <Button
+        android:id="@+id/custom_buttons_reset"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/custom_reset"/>
 
     <Button
+        android:id="@+id/custom_buttons_save"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/custom_save"/>
