--- a/companion/src/main/res/layout/presets.xml
+++ b/companion/src/main/res/layout/presets.xml
@@ -4,8 +4,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <android.support.v7.widget.RecyclerView
+    <com.nilhcem.hexawatch.ui.widget.recyclerview.AutofitRecyclerView
         android:id="@+id/presets_recyclerview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:clipToPadding="false"
+        android:columnWidth="120dp"
+        android:padding="2dp"
+        android:scrollbars="vertical"/>
 </FrameLayout>
