--- a/companion/src/main/res/values/styles.xml
+++ b/companion/src/main/res/values/styles.xml
@@ -6,5 +6,6 @@
         <item name="colorPrimaryDark">@color/primary_dark</item>
         <item name="colorAccent">@color/accent</item>
         <item name="android:textColor">@color/primary_text</item>
+        <item name="android:windowBackground">@color/background</item>
     </style>
 </resources>
