--- a/companion/src/main/res/layout/custom_range_chooser.xml
+++ b/companion/src/main/res/layout/custom_range_chooser.xml
@@ -5,8 +5,9 @@
 
     <TextView
         android:id="@+id/range_chooser_title"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:gravity="start"
         android:textSize="@dimen/custom_text_size"
         tools:text="@string/custom_stroke_size"/>
 
