--- a/companion/src/main/res/layout-land/custom.xml
+++ b/companion/src/main/res/layout-land/custom.xml
@@ -5,6 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:baselineAligned="false"
     android:orientation="horizontal">
 
     <com.nilhcem.hexawatch.ui.widget.WearFrameLayout
