--- a/companion/src/main/res/values/colors.xml
+++ b/companion/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="primary_dark">#303F9F</color>
     <color name="accent">#FF4081</color>
     <color name="primary_text">#212121</color>
+    <color name="secondary_text">#727272</color>
     <color name="background">#EEEEEE</color>
 
     <color name="themes_item_bg_default">#E1E1E1</color>
